@@ -3,6 +3,7 @@ requires 'Carp';
 requires 'Exporter';
 requires 'List::Util'   => '1.33';
 requires 'parent';
+requires 'Path::Tiny'   => '0.101';
 requires 'Perl::Critic' => '1.126';
 requires 'Perl::Critic::Policy::Objects::ProhibitIndirectSyntax'               => '1.126';
 requires 'Perl::Critic::Policy::Subroutines::ProhibitAmpersandSigils'          => '1.126';
