@@ -1,6 +1,7 @@
 {{$NEXT}}
   - Also consider -W a violation of WarningsSwitch policy
   - Fix false positive in DollarAB policy where $a or $b is within another block
+  - Add PackageMatchesFilename policy
 
 0.021     2017-06-03 19:49:16 EDT
   - Be more lenient when trying to detect postderef for DeprecatedFeatures autoderef violations
